Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-94364

Rotate and zoom do not work on Android

    XMLWordPrintable

Details

    • Android
    • fabf51e3e39d655e873addde891639009c7485c6 (qt/qtdatavis3d/dev) 7d26ac4e42e984ae74e18b107f6d3737b97b5d0c (qt/qtdatavis3d/6.1) 5bd76c781d4240e3507b418aabdc273fc342a99d (qt/qtdatavis3d/6.2)

    Description

      Pinch-zoom or rotate do not work at all, might affect all touch controlled platforms.

      https://doc.qt.io/qt-5/qtdatavisualization-interacting-with-data.html

      Attachments

        For Gerrit Dashboard: QTBUG-94364
        # Subject Branch Project Status CR V

        Activity

          People

            oulu_hillbilly Sami Varanka
            tokorpip Tomi Korpipää
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes