Fix: Rotate and zoom don't work on android

On touch controlled platforms,
the AbstractDeclarative didn't get any
touchevents. Fixed this by setting
acceptTouchEvents to true in AbstractDeclarative
constructor.

Fixes: QTBUG-94364
Change-Id: I072be80a942afc71e86e5c352d078a90baaa066c
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
(cherry picked from commit fabf51e3e39d655e873addde891639009c7485c6)
Reviewed-by: Sami Varanka <sami.varanka@qt.io>
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>