src/datavisualizationqml2/abstractdeclarative.cpp
@@ -66,8 +66,11 @@ AbstractDeclarative::AbstractDeclarative(QQuickItem *parent) :
     connect(this, &QQuickItem::windowChanged, this, &AbstractDeclarative::handleWindowChanged);
 
     // Set contents to false in case we are in qml designer to make component look nice
-    m_runningInDesigner = QGuiApplication::applicationDisplayName() == "Qml2Puppet";
+    m_runningInDesigner = QGuiApplication::applicationDisplayName() == QLatin1String("Qml2Puppet");
     setFlag(ItemHasContents, !m_runningInDesigner);
+
+    // Accept touchevents
+    setAcceptTouchEvents(true);
 }
 
 AbstractDeclarative::~AbstractDeclarative()
